--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'com.bmuschko.cargo-base'
 // you must chose set a trainingUserName, which gives you your own deploy path on Tomcat
 // and your own artifact repository 
 
-ext.trainingUserName = 'mytrainingusername' // it is a good idea to chose the same as your github id
+ext.trainingUserName = 'florus' // it is a good idea to chose the same as your github id
 
 ext {
 artifactoryUrlAndPort = System.properties.artifactoryUrlAndPort ?: "http://roadshowartifactory:8081/artifactory"
