--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,10 @@ deployPath = System.properties.deployPath ?: "${trainingUserWebappDir}/${appName
 buildNumber = System.properties.buildNumber ?: "SNAPSHOT"
 } 
 
-group = 'net.praqma.roadshow.buep' // FIXME - add your initials or github id here
+group = 'net.praqma.roadshow.f-yeetta' // FIXME - add your initials or github id here
 
 ext.versionMajor = "1"
-ext.versionMinor = "1"
+ext.versionMinor = "2"
 ext.versionPatch = "0"
 
 version = "${versionMajor}.${versionMinor}.${versionPatch}-${buildNumber}"
